Expand theme options and add new color schemes

--- a/themes.ini
+++ b/themes.ini
@@ -6,9 +6,29 @@ bg = 255,255,255
 fg = 0,0,0
 panel_bg = 240,240,240
 button_bg = 230,230,230
+tab_bg = 230,230,230
+tab_active_bg = 210,210,210
 
 [dark]
 bg = 45,45,45
 fg = 220,220,220
 panel_bg = 55,55,55
 button_bg = 70,70,70
+tab_bg = 60,60,60
+tab_active_bg = 75,75,75
+
+[dark-blue]
+bg = 10,25,55
+fg = 173,216,230
+panel_bg = 20,35,70
+button_bg = 30,50,90
+tab_bg = 25,40,80
+tab_active_bg = 40,55,100
+
+[dark-green]
+bg = 10,55,25
+fg = 144,238,144
+panel_bg = 20,70,35
+button_bg = 30,90,50
+tab_bg = 25,80,45
+tab_active_bg = 40,100,60
