Style comboboxes and tree headings

--- a/themes.ini
+++ b/themes.ini
@@ -14,6 +14,8 @@ tree_bg = 255,255,255
 tree_fg = 0,0,0
 tree_select_bg = 200,200,200
 tree_select_fg = 0,0,0
+tree_heading_bg = 230,230,230
+tree_heading_fg = 0,0,0
 
 [dark]
 bg = 45,45,45
@@ -28,6 +30,8 @@ tree_bg = 45,45,45
 tree_fg = 220,220,220
 tree_select_bg = 70,70,70
 tree_select_fg = 220,220,220
+tree_heading_bg = 60,60,60
+tree_heading_fg = 220,220,220
 
 [dark-blue]
 bg = 10,25,55
@@ -42,6 +46,8 @@ tree_bg = 10,25,55
 tree_fg = 173,216,230
 tree_select_bg = 40,55,100
 tree_select_fg = 173,216,230
+tree_heading_bg = 25,40,80
+tree_heading_fg = 173,216,230
 
 [dark-green]
 bg = 10,55,25
@@ -56,3 +62,5 @@ tree_bg = 10,55,25
 tree_fg = 144,238,144
 tree_select_bg = 40,100,60
 tree_select_fg = 144,238,144
+tree_heading_bg = 25,80,45
+tree_heading_fg = 144,238,144
