--- a/themes.ini
+++ b/themes.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-active_theme = light
+active_theme = dark-green
 
 [light]
 bg = 255,255,255
@@ -64,3 +64,4 @@ tree_select_bg = 40,100,60
 tree_select_fg = 144,238,144
 tree_heading_bg = 25,80,45
 tree_heading_fg = 144,238,144
+
